Fri Oct 11 11:03:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/apps/freebcp.c src/apps/tsql.c:
	- Include config.h properly.

Fri Oct 11 10:48:13 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/asprintf.c:
	- #if HAVE_CONFIG_H instead of #ifdef HAVE_CONFIG_H for
	  consistency with other modules.

Fri Oct 11 10:45:12 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/replacements/vasprintf.c:
	- Add autoconf header test for paths.h.  Use _PATH_DEVNULL
	  instead of hardcoding "/dev/null".

Thu Oct 10 15:04:05 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/pool/main.c src/pool/member.c:
	- Make some local functions static, and provide prototypes.

Thu Oct 10 13:09:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/Makefile.am doc/userguide.sgml:
	- Build and install the pool server by default.
	- Update tdspool documentation.  Remove build/install
	  instructions since that is now done by default.
	  Emphasize TDS 4.2 configuration restrictions.

Thu Oct 10 11:37:53 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/odbc/convert_tds2sql.c:
	- Remove unused variable.

Thu Oct 10 11:35:28 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/config.c:
	- Bug fix, printf was used where fprintf was intended.

Thu Oct 10 10:47:19 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/pool/Makefile.am:
	- Distribute and install pool.conf.

Wed Oct  9 16:56:37 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* freetds.conf interfaces
	  src/pool/pool.conf (added):
	- Add sample pool configuration.

Wed Oct  9 16:36:26 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* samples/.cvsignore:
	- Ignore generated files.

Wed Oct  9 16:34:05 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/dbutil.c:
	- Provide Microsoft-compatible behavior when MSDBLIB is defined
	  and a user-installed error handler returns INT_CONTINUE
	  from an error handler that received an error other than
	  SYBETIME.
